# Generation3LCRNG

./: .gitignore  CMakeLists.txt  Makefile  README.md  iv_calc.c  main.c  settings_example.ini
data/: format.py  fr_scraper.py  lg_scraper.py  pokemon-stats-gen1-abilites.json
data/FR/: Mono-HELP-A  Mono-HELP-Start  Mono-LA-A  Mono-LA-L  Mono-LA-Start  Mono-LR-A  Mono-LR-Start  Stereo-HELP-A  Stereo-HELP-Start  Stereo-LA-A  Stereo-LA-L  Stereo-LA-Start  Stereo-LR-A  Stereo-LR-Start
data/FR/ENG/: Mono-HELP-A  Mono-HELP-Start  Mono-LA-A  Mono-LA-L  Mono-LA-Start  Mono-LR-A  Mono-LR-Start  Stereo-HELP-A  Stereo-HELP-Start  Stereo-LA-A  Stereo-LA-L  Stereo-LA-Start  Stereo-LR-A  Stereo-LR-Start
data/FR/EU/: Mono-HELP-A  Mono-HELP-Start  Mono-LA-A  Mono-LA-L  Mono-LA-Start  Mono-LR-A  (+8 more)
data/FRENCSLOTS/: land  rock  water
data/LG/: Mono-HELP-A  Mono-HELP-Start  Mono-LA-A  Mono-LA-Start  Mono-LR-A  Mono-LR-Start  Stereo-HELP-A  Stereo-HELP-Start  Stereo-LA-A  Stereo-LA-L  Stereo-LA-Start  Stereo-LR-A  Stereo-LR-Start
data/LGENCSLOTS/: land  rock  water
data/raw/: fr_seeds.csv  frlandenc.csv  frrockenc.csv  frwaterenc.csv  lg_seeds.csv  lglandenc.csv  lgrockenc.csv  lgwaterenc.csv
data/scripts/: encounters.py  fr_scraper.py  lg_scraper.py  scrape.py  seed_scraper.py  stats.py  test.py
include/: constants.h  encounter_table.h  enums.h  filters.h  generator.h  ivs.h  locations.h  pokemon.h  rng.h  seeds.h  settings.h  timers.h
src/: encounter_table.h  encounters.c  enums.h  filters.c  generator.c  generator.h  ivs.c  ivs.h  locations.c  locations.h  pokemon.c  pokemon.h  rng.c  rng.h  seeds.c  seeds.h  settings.c  timers.c
test/: main.c
(+28 files in other folders)
